--- a/index.html
+++ b/index.html
@@ -489,8 +489,11 @@
         </div>
         
         <div id="qnaWrap" class="faqWrap">
+          <div class="bgImg">
+            <img src="./img/qnaImg2.png" alt="">
+          </div>
           <div class="leftWrap">
-            <img src="./img/qnaImg.png" alt="">
+            <img src="./img/qnaImg1.png" alt="">
           </div>
           <div class="rightWrap">
             <div class="titleWrap">
@@ -498,7 +501,7 @@
             </div>
             <div class="contentsWrap">
               <p>
-                정기 등록 및 수업 관련 문의는<br/>
+                정기 등록 및 수업 관련 문의는
                 전화 또는 아래 버튼을 클릭하여 문의해주세요.<br/>
                 네이버 톡도 가능합니다. ^^<br/>
                 <br/>
