schedule show/hide toggle button js fin

--- a/index.html
+++ b/index.html
@@ -345,14 +345,14 @@
     </div>
   </section>
   <section id="schedule">
-    <div class="scheduleViewToggle">
+    <div class="scheduleViewToggle" id="scheduleViewToggle">
       <div class="container">
-        <div class="textWrap">
-          그룹 스케쥴 보기<span>▼</span>
+        <div class="textWrap" id="scheduleToggleText">
+          그룹 스케쥴 닫기<span>▲</span>
         </div>
       </div>
     </div>
-    <div class="scheduleTableWrap">
+    <div class="scheduleTableWrap" id="scheduleTableWrap">
       <div class="container">
         <div class="titleWrap">
           <h1>Group Practice Schedule</h1>
@@ -405,6 +405,7 @@
       </div>
     </div>  
   </section>
+  <script src="./js/scheduleToggleBtn.js"></script>
   <section id="studioGallery">
     <div class="container">
       <div class="titleWrap">
