--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <li>&#45; 요가, 명상 수련 20년</li>
             <li>&#45; 요가 지도자 양성 및 요가 근육학 지도</li>
             <li>&#45; 운동 재활 트레이너</li>
-            <li>&#45;5 퍼스널 테라피스트</li>
+            <li>&#45; 5 퍼스널 테라피스트</li>
             <li>&#45; 임산부 요가 마스터 지도자</li>
             <li>&#45; 자연치유사</li>
             <li>&#45; 차명상지도자</li>
@@ -359,7 +359,7 @@
           <h3>* 매월 마지막 토요일은 휴무입니다.</h3>
         </div>
         <div class="contentsWrap">
-          <table>
+          <table class="table1">
             <thead>
               <tr>
                 <th>시간</th>
@@ -379,7 +379,7 @@
                 <td>Ashtanga Mysore (self)</td>
                 <td>Hatha</td>
                 <td>Ashtanga Mysore (self)</td>
-                <td>Ashtanga Mysore (led)</td>
+                <td rowspan="3">Ashtanga Mysore (led)</td>
               </tr>
               <tr>
                 <td>오전<br/>11:00 ~ 12:30</td>
@@ -388,7 +388,6 @@
                 <td>Ashtanga Basic</td>
                 <td></td>
                 <td>Pelvis Stretch</td>
-                <td></td>
               </tr>
               <tr>
                 <td>오후<br/>08:00 ~ 10:00</td>
@@ -397,7 +396,53 @@
                 <td>Ashtanga Mysore (self)</td>
                 <td>Hatha</td>
                 <td>Ashtanga Mysore (self)</td>
+              </tr>
+            </tbody>
+          </table>
+          
+          <table class="table2">
+            <thead>
+              <tr>
+                <th>시간/요일</th>
+                <th>오전<br/>09:00 ~ 11:00</th>
+                <th>오전<br/>11:00 ~ 12:30</th>
+                <th>오후<br/>08:00 ~ 10:00</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>월</td>
+                <td>Ashtanga Mysore (self)</td>
+                <td>Shoulder Stretch</td>
+                <td>Ashtanga Mysore (self)</td>
+              </tr>
+              <tr>
+                <td>화</td>
+                <td>Hatha</td>
                 <td></td>
+                <td>Hatha</td>
+              </tr>
+              <tr>
+                <td>수</td>
+                <td>Ashtanga Mysore (self)</td>
+                <td>Ashtanga Basic</td>
+                <td>Ashtanga Mysore (self)</td>
+              </tr>
+              <tr>
+                <td>목</td>
+                <td>Hatha</td>
+                <td></td>
+                <td>Hatha</td>
+              </tr>
+              <tr>
+                <td>금</td>
+                <td>Ashtanga Mysore (self)</td>
+                <td>Pelvis Stretch</td>
+                <td>Ashtanga Mysore (self)</td>
+              </tr>
+              <tr>
+                <td>토</td>
+                <td colspan="3">Ashtanga Mysore (led)</td>
               </tr>
             </tbody>
           </table>
