--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
   <section id="about">
     <div class="about_bg"></div>
     <div class="container">
-      <div class="imgWrap">
-        <img src="" alt="">
-      </div>
+      <div class="imgWrap"></div>
       <div class="textWrap">
         <div class="titleWrap">
           <div class="titleLine"></div>
