footer 수정 및 copyright 파일 삭제

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
     </div>
   </section>
   <footer id="footer">
-    <div class="container">
+    <div class="ft_container">
       <div class="leftContentsWrap">
         <h1 class="logo">
           <a href="#">
@@ -647,13 +647,12 @@
         </ul>
       </div>
     </div>
-  </footer>
-  
-  <section id="copyright">
-    <div class="container">
-      <div class="textWrap">Copyright © 2024 Jelee. All rights reserved.</div>
+    <div id="copyright">
+      <div class="container">
+        <div class="textWrap">Copyright © 2024 Jelee. All rights reserved.</div>
+      </div>
     </div>
-  </section>
+  </footer>
   <div id="topBtn">
     <div class="arrow">
       <span></span>
