home화면 소개보러가기 버튼 scrollTo 적용

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             푸쉬파요가는 <span>정통 하타요가</span>와 <span>아쉬탕가</span>를 체계적으로
             수련하는 공간입니다. 
           </p>
-          <div class="button">소개 보러 가기 <span>▶</span></div>
+          <div class="button goToAbout">소개 보러 가기 <span>▶</span></div>
         </div>
         <div class="imgWrap">
           <div class="img1"></div>
