img alt속성 값 넣어주기

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <div class="contentsWrap">
         <div class="listItems leftItems">
           <div class="listItemImg">
-            <img src="./img/class_img1.jpeg" alt="">
+            <img src="./img/class_img1.jpeg" alt="아쉬탕가 마이솔 클래스 사진">
           </div>
           <div class="listItemTextWrap">
             <div class="listItemTitleWrap">
@@ -260,13 +260,13 @@
             </div>
           </div>
           <div class="listItemImg">
-            <img src="./img/class_img2.jpeg" alt="">
+            <img src="./img/class_img2.jpeg" alt="정통 하타 요가 사진">
           </div>
         </div>
 
         <div class="listItems leftItems">
           <div class="listItemImg">
-            <img src="./img/class_img3.jpeg" alt="">
+            <img src="./img/class_img3.jpeg" alt="어깨 힐링 요가 사진">
           </div>
           <div class="listItemTextWrap">
             <div class="listItemTitleWrap">
@@ -311,13 +311,13 @@
             </div>
           </div>
           <div class="listItemImg">
-            <img src="./img/class_img4.jpeg" alt="">
+            <img src="./img/class_img4.jpeg" alt="골반 힐링 요가 사진">
           </div>
         </div>
 
         <div class="listItems leftItems">
           <div class="listItemImg">
-            <img src="./img/class_img5.jpeg" alt="">
+            <img src="./img/class_img5.jpeg" alt="휠 스트레칭 요가 사진">
           </div>
           <div class="listItemTextWrap">
             <div class="listItemTitleWrap">
@@ -456,37 +456,37 @@
       <div class="contentsWrap">
         <ul class="studioImgGroup">
           <li>
-            <img src="./img/studio_img1.jpeg" alt="">
+            <img src="./img/studio_img1.jpeg" alt="요가원 로비 사진">
             <div class="transBk">
               <span>요가원 로비</span>
             </div>
           </li>
           <li>
-            <img src="./img/studio_img2.jpeg" alt="">
+            <img src="./img/studio_img2.jpeg" alt="수련실 사진">
             <div class="transBk">
               <span>수련실</span>
             </div>
           </li>
           <li>
-            <img src="./img/studio_img3.jpeg" alt="">
+            <img src="./img/studio_img3.jpeg" alt="휴게실 사진">
             <div class="transBk">
               <span>휴게실</span>
             </div>
           </li>
           <li>
-            <img src="./img/studio_img4.jpeg" alt="">
+            <img src="./img/studio_img4.jpeg" alt="남자 탈의실 사진">
             <div class="transBk">
               <span>남자 탈의실</span>
             </div>
           </li>
           <li>
-            <img src="./img/studio_img5.jpeg" alt="">
+            <img src="./img/studio_img5.jpeg" alt="여자 탈의실 사진">
             <div class="transBk">
               <span>여자 탈의실</span>
             </div>
           </li>
           <li>
-            <img src="./img/studio_img6.jpeg" alt="">
+            <img src="./img/studio_img6.jpeg" alt="여자 탈의실 입구 사진">
             <div class="transBk">
               <span>여자 탈의실 입구</span>
             </div>
@@ -536,10 +536,10 @@
         
         <div id="qnaWrap" class="faqWrap">
           <div class="bgImg">
-            <img src="./img/qnaImg2.png" alt="">
+            <img src="./img/qnaImg2.png" alt="문의하기 배경 이미지">
           </div>
           <div class="leftWrap">
-            <img src="./img/qnaImg1.png" alt="">
+            <img src="./img/qnaImg1.png" alt="문의하기 이미지 ">
           </div>
           <div class="rightWrap">
             <div class="titleWrap">
